--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^0.5.22",
     "react": "15.4.2",
     "react-native": "0.40.0",
-    "react-native-tab-navigator": "^0.3.3"
+    "react-native-tab-navigator": "^0.3.3",
+    "react-native-vector-icons": "^4.0.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "18.1.0",
-    "react-test-renderer": "15.4.2"
+    "react-test-renderer": "15.4.2",
+    "redux-devtools": "^3.3.2"
   },
   "jest": {
     "preset": "react-native"
