--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
