--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "native-base": "^0.5.22",
     "react": "15.4.2",
     "react-native": "0.40.0",
+    "react-native-navigation-redux-helpers": "^0.5.0",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
