--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "es6-promise": "^4.0.5",
+    "isomorphic-fetch": "^2.2.1",
     "native-base": "^0.5.22",
     "react": "15.4.2",
     "react-native": "0.40.0",
@@ -15,9 +17,8 @@
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
-    "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0",
-    "whatwg-fetch": "^2.0.2"
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
