--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "eject-native-base": "node node_modules/native-base/ejectTheme.js"
   },
   "dependencies": {
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
-    "native-base": "^0.5.22",
+    "native-base": "2.0.0",
     "react": "15.4.2",
     "react-native": "0.40.0",
     "react-native-navigation-redux-helpers": "^0.5.0",
