--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "native-base": "2.0.0",
     "react": "15.4.2",
     "react-native": "0.40.0",
+    "react-native-easy-grid": "^0.1.8",
     "react-native-navigation-redux-helpers": "^0.5.0",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
