--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.40.0",
     "react-native-easy-grid": "^0.1.8",
     "react-native-navigation-redux-helpers": "^0.5.0",
+    "react-native-storage": "^0.1.5",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
