--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-promise-middleware": "^4.2.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "react-native-popup-menu":"0.7.2"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
